fixed review window alignments

--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -96,7 +96,7 @@ h2 {
 }
 
 .star {
-    width: 25px;
+    width: 30px;
 }
 
 .selector > h3 {
